force-app/main/default/objects/Sales_Account_Manager__c/Sales_Account_Manager__c.object-meta.xml
<CustomObject>
    <label>Sales Account Manager</label>
    <nameField>
        <displayFormat>SAM-{0000}</displayFormat>
        <label>Sales Account Manager Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Account Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>