force-app/main/default/objects/Sales_Account_Manager__c/fields/Employee_name__c.field-meta.xml
<CustomField>
    <fullName>Employee_name__c</fullName>
    <label>Employee_name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>