force-app/main/default/objects/Sales_Account_Manager__c/fields/Sales_Revenue_Data__c.field-meta.xml
<CustomField>
    <fullName>Sales_Revenue_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Revenue Data</label>
    <referenceTo>Sales_Revenue_Data__c</referenceTo>
    <relationshipLabel>Sales Account Managers</relationshipLabel>
    <relationshipName>Sales_Account_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>