force-app/main/default/objects/Sales_Account_Manager__c/fields/Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Role__c</fullName>
    <label>Team Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>AM Manager</fullName>
            </value>
            <value>
                <fullName>Shared AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>